--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
+    "react-toastify": "^9.0.8",
     "values.js": "^2.1.1"
   },
   "devDependencies": {
