--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
+    "react-scroll": "^1.8.7",
     "react-toastify": "^9.0.8",
     "values.js": "^2.1.1"
   },
@@ -27,6 +28,7 @@
     "@types/md5": "^2.3.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
