--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scroll": "^1.8.7",
     "react-toastify": "^9.0.8",
+    "sass": "^1.55.0",
     "values.js": "^2.1.1"
   },
   "devDependencies": {
